# canopy-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_JA.md  README_ZH.md  Wikification.ipynb  all_characters.json  analyze_threshold.py  band2members.json  benchmark_papercompat.py  build_cdt.sh  build_golden_set.py  cdt_profiling.py  cdt_profiling.sh  codified_decision_tree.py  eval_calibration.py  investigate_cdt.py  investigate_personamem.py  investigate_personamem_baseline.py  investigate_personamem_cdt_value.py  investigate_personamem_hybrid.py  llm.py  multi_eval.py  pyproject.toml  run_benchmark.py  run_benchmark.sh  test_gen_format.py  verify_cdt.py
artifacts/: b-score-analysis.md  baseline-results.md  benchmark-investigation-report.md  benchmark-log.md  benchmark-prd.md  canopy-design.md  cdt-improvements-prd.md  cdt-quality-improvement-prd.md  codifier-comparison.md  discriminator-analysis.md  e7-episodic-memory-prd.md  embedding-refactor-prd.md  golden_set_kasumi_50.json  initial-plan.md  legacy-migration-prd.md  llm-adapters.md  personamem-eval-design.md  personamem-feasibility.md  phase0-phase1-prd.md  phase0-results.md  phase2a-variance-results.md  phase2d-falsifiability-results.md  robust-cdt-prd-v2.md  robust-cdt-prd.md  session-10-progress.md  session-7-summary.md  session-9-progress.md  session-progress.md
examples/: quickstart.py
scripts/: cdt_steps.py  lifechoice_benchmark.py  personamem_benchmark.py  personamem_hybrid_benchmark.py  personamem_insample_test.py  variance_runner.py
tests/: conftest.py  test_builder.py  test_cdt_steps.py  test_cli.py  test_cluster.py  test_core.py  test_data.py  test_datasets.py  test_embeddings.py  test_episodic.py  test_integration.py  test_llm.py  test_merge.py  test_prompts.py  test_provenance.py  test_quality.py  test_temporal.py  test_validation.py  test_wikify.py
(+18 files in other folders)
