[project]
name = "canopy-ai"
version = "0.1.0"
description = "Evolving decision trees for behavioral profiling — extending Codified Decision Trees with temporal dynamics, structured gates, and domain-agnostic profiling."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bhargav Chippada" },
]
keywords = ["decision-tree", "behavioral-profiling", "llm", "user-modeling", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "anthropic>=0.40",
    "datasets>=2.0",
    "nltk>=3.8",
    "numpy>=1.24",
    "tqdm>=4.60",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.10",
]
openai = [
    "openai>=2.0",
]

[project.scripts]
canopy = "canopy.cli:app"

[project.urls]
Homepage = "https://github.com/bhargavchippada/canopy-ai"
Repository = "https://github.com/bhargavchippada/canopy-ai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canopy"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
